force-app/main/default/objects/BMX_Audits_Schedule__c/fields/Origination_Entity__c.field-meta.xml
<CustomField>
    <fullName>Origination_Entity__c</fullName>
    <label>Origination Entity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origination__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Origination_Location</valueSetName>
    </valueSet>
</CustomField>