force-app/main/default/objects/BMX_Audits_Schedule__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Revision #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>